--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "noopener",
         "noreferrer",
         "Shojon",
-        "Tolaram"
+        "Toastify",
+        "Tolaram",
+        "watsap"
     ]
 }
