--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Houlader",
         "noopener",
         "noreferrer",
+        "registation",
         "Shojon",
         "Toastify",
         "Tolaram",
