updat login feome

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "acount",
         "Firestore",
         "FIRREBASE",
         "houladar",
@@ -8,6 +9,7 @@
         "noreferrer",
         "registation",
         "Shojon",
+        "showpas",
         "Toastify",
         "Tolaram",
         "watsap"
